EPviewer
(c)Raja S
rajajs {at} gmail {dot} com

version 0.9.1
--------------

* Bug fix - crop frame can extend outside image borders now
* Bug fix - calipers are removed when calibration is cancelled after second attempt
* Left click on canvas starts new caliper


version 0.9
-------------
 October 01, 2008
 * Notes and playlist reside in tabs in a split window
 * Image can be resized without losing caliper and calib coordinates
 * Multiple active calipers at any time
 * Loaded images can be cropped and rotated with transformation saved
 * Can save image in multiple  formats now


version 0.8.0
-------------
Aug 09, 2008
  * Removed the ability to create slides
  * Notes, calibration etx are stored as a pickled dictionary
  * Added ability to sketch (doodle) on the image
  * No tabs in the frame. Note opens as separate window
  * Keyboard shortcuts functional

version 0.7.0
------------
Dec 25, 2007

  Error redirection to a log file
  No note file if there is no text, calibration or zoomframe to store
  Unlimited number of slides
  Only show slides if required
  Fixed error in importing tiff plugin in the compiled windows binary
  Disabled zoomframe for now - need to implement it better
  changed slide from richtextctrl to htmlwindow
  added keyboard shortcuts
  Fixed problems related to changing page or image while caliper still active

version 0.6.5
-------------
Dec 24, 2007

  Calibrate status is updated immediately
  Added two slides as default
  Added zoomframe

version 0.6
--------------
Nov 03, 2007

  New Statusbar with 4 fields
  New icons for exit and about
  About fixed

version 0.5.5
------------
Nov 01, 2007

  Will now accept lower case extensions
  When saving images, the dc is copied out before the savedialog, 
        so no more whiteouts in windows
  Note now saves calibration and a zoomframe (to be implemented)
  File selection is with filedialog instead of imagebrowser
  GIF is also an accepted format.